<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hamama Delivery</string>
    <string name="qualify_client">QUALIFY CLIENT</string>
    <string name="false_cr_false_avenue">Price</string>
    <string name="until">Until</string>
    <string name="from">From</string>
    <string name="journey_finished">JOURNEY FINISHED</string>
    <string name="viaje_finalizado">VIAJE FINALIZADO</string>
    <string name="desde">From</string>
    <string name="hasta">Until</string>
    <string name="calificar_conductor">QUALIFY DRIVER</string>
    <string name="origen">Origen:</string>
    <string name="carrera_34_calle_5">Carrera 34 calle 5</string>
    <string name="destino">Destiny:</string>
    <string name="tiempo">Time:</string>
    <string name="end_the_trip">End the trip</string>
    <string name="start_the_trip">Start the trip</string>
    <string name="distancia">Distance:</string>
    <string name="solicitar_ahora">Apply Now</string>
    <string name="correo_electronico">Email</string>
    <string name="contrase_a">Password</string>
    <string name="ingresar">GET INTO</string>
    <string name="Thanks">Thank you for submitting a request to work with us. Your request will be considered and we will contact you as soon as possible.</string>
    <string name="proyecto_de_estructuta_de_datos_2">Welcome to the Hamama Delivery</string>
    <string name="proyecto_de_estructuta_de_datos_3">Start your journey with</string>
    <string name="proyecto_de_estructuta_de_datos_33">Hamama Delivery</string>
    <string name="proyecto_de_estructuta_de_datos_4">By creating an account, you agree to Terms of \n Service and Privacy Policy</string>
    <string name="proyecto_de_estructuta_de_datos_5">Would you like to join us?</string>
    <string name="soy_conductor">I\'m a Driver</string>
    <string name="soy_cliente">I\'m Customer</string>
    <string name="solicitar_viaje">request trip</string>
    <string name="estado">state</string>
    <string name="lugar_de_recogida">Pickup location</string>
    <string name="nombre_del_conductor">Name of the driver</string>
    <string name="email_del_conductor">Driver\'s email</string>
    <string name="conectarse">CONNECT</string>
    <string name="iniciar_viaje">START TRIP</string>
    <string name="finalizar_viaje">END TRIP</string>
    <string name="rechazar">DECLINE</string>
    <string name="aceptar">ACCEPT</string>
    <string name="_10">10</string>
    <string name="_0_km">0 km</string>
    <string name="tiempo_de_llegada">Time of arrival</string>
    <string name="nombre_completo">Full name</string>
    <string name="marca_del_vehiculo">Vehicle brand</string>
    <string name="placa_del_vehiculo">Vehicle plate</string>
    <string name="registrar">REGISTRAR</string>
    <string name="buscando_conductor">LOOKING FOR DRIVER...</string>
    <string name="cancelar_viaje">CANCEL TRIP</string>
    <string name="selecciona_una_opcion">Select an option</string>
    <string name="ya_tengo_cuenta">I ALREADY HAVE AN ACCOUNT</string>
    <string name="registrarme_ahora">REGISTER NOW</string>
    <string name="actualizar_perfil">UPDATE PROFILE</string>
    <string name="cerrar_sesion">Sign off</string>
    <string name="channel_name">name</string>
    <string name="channel_description">channel description</string>
    <string name="online_driver">" "</string>
    <string name="need_location" />
    <string name="location_content" />
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="enjoy_your_order">enjoy your order</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="i_agree_to_the_terms_conditions">I agree to the terms conditions</string>
    <string name="preview">Preview</string>
    <string name="register">Register</string>
    <string name="your_id_card">Your Id Card</string>
    <string name="id_num">Id Number</string>
    <string name="address">Address</string>
    <string name="id_registion" translatable="false">Id Registion</string>
    <string name="id_registration">Id Registration</string>
    <string name="car_type">Car Type</string>
    <string name="id_color">Color</string>
    <string name="home">Restaurants</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="username">UserName</string>
    <string name="sample_title">Welcome back</string>
    <string name="verify_mobile">Verify mobile</string>
    <string name="verify_mobile_otp">Enter your OTP code below</string>
    <string name="verify">Verify</string>
    <string name="starting_point">Starting point</string>
    <string name="access_point">Access Point</string>
    <string name="restaurants">Restaurants</string>
    <string name="cart">Cart</string>
    <string name="online">Online</string>
    <string name="Thanks2">You can work with us online by registering your data in the settings field</string>
    <string name="the_grade_was_saved_correctly">The grade was saved correctly</string>
    <string name="you_must_enter_the_rating">You must enter the rating</string>
    <string name="your_bonus_is">"your bonus is "</string>
    <string name="entre_your_address">Entre Your Address</string>
    <string name="error_in_capturing">Error in capturing!</string>
    <string name="total_price">"Total Price : "</string>
    <string name="please_activate_your_location_to_continue">Please activate your location to continue</string>
    <string name="settings">settings</string>
    <string name="provide_permissions_to_continue">Provide permissions to continue</string>
    <string name="this_application_requires_location_permissions_to_be_used">This application requires location permissions to be used</string>
    <string name="ok">OK</string>
    <string name="status_accepted">Status: Accepted</string>
    <string name="status_trip_started">Status: Trip Started</string>
    <string name="status_trip_finished">Status: Trip Finished</string>
    <string name="to">"To: "</string>
    <string name="pick_up_here">pick up here</string>
    <string name="tel">tel</string>
    <string name="your_driver">your driver</string>
    <string name="bug_found">bug found</string>
    <string name="driver_found_waiting_answer">DRIVER FOUND\nWAITING ANSWER</string>
    <string name="no_driver_found">NO DRIVER FOUND</string>
    <string name="trip_canceled">TRIP CANCELED</string>
    <string name="the_client_canceled_the_request">The client canceled the request.</string>
    <string name="the_request_was_successfully_canceled">The request was successfully canceled</string>
    <string name="notification_could_not_be_sent">Notification could not be sent</string>
    <string name="the_notification_could_not_be_sent_because_the_driver_does_not_have_a_session_token">The notification could not be sent because the driver does not have a session token</string>
    <string name="a_customer_is_requesting_a_service_at_a_distance_of">A customer is requesting a service at a distance of</string>
    <string name="pick_up_at">"Pick up at: "</string>
    <string name="destiny">"Destiny: "</string>
    <string name="the_driver_did_not_accept_the_trip">The driver did not accept the trip</string>
    <string name="all_field_are_required">All Field Are Required</string>
    <string name="your_profile_has_been_updating_successfully">Your Profile has been Updating Successfully</string>
    <string name="log_off">Log off</string>
    <string name="you_can_t_disconnect">you can\'t disconnect</string>
    <string name="connect">Connect</string>
    <string name="deserved_amount">deserved amount :</string>
    <string name="your_position">your position</string>
    <string name="the_client_canceled_the_trip">The client canceled the trip</string>
    <string name="you_must_be_closer_to_the_pickup_position">You must be closer to the pickup position</string>
    <string name="finished_trip">finished trip</string>
    <string name="journey_started">journey started</string>
    <string name="hamama">Hamama</string>
    <string name="are_you_close_to_the_pickup_position">Are you close to the pickup position?</string>
    <string name="trip_status">TRIP STATUS</string>
    <string name="your_trip_status_is">Your trip status is:</string>
    <string name="runs_in_the_background">Runs in the background</string>
    <string name="accept">Accept</string>
    <string name="cancel">cancel</string>
    <string name="payment_history">Payment history</string>
    <string name="trip_history">Trip history</string>
    <string name="invite_friends">invite friends</string>
    <string name="do_more">Do more</string>
    <string name="get_food_delivered">Get food delivered</string>
    <string name="earn_money_driving">Earn money driving</string>
    <string name="rate_us_in_the_store">Rate us in the store</string>
    <string name="tab_1">s\n</string>

    <string-array name="Languages" tools:ignore="InconsistentArrays">
        <item>محافظة شمال غزة</item>
        <item>محافظة غزة</item>
        <item>محافظة دير البلح</item>
        <item>محافظة خان يونس</item>
        <item>محافظة رفح</item>
    </string-array>


</resources>