<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="activities.driver.NotificationBookingActivity">


  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <ImageView
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:src="@drawable/icons8_mapas_de_google_500"
          android:layout_gravity = "center"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/desde"
          android:textAlignment="center"
          android:textSize= "22sp"
          android:textColor= "@android:color/black"
          android:layout_marginTop="20dp"
          />

      <TextView
          android:id="@+id/textViewOrigin"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/false_cr_false_avenue"
          android:textAlignment="center"
          android:textSize= "17sp"
          android:layout_marginTop="5dp"
          />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/hasta"
          android:textAlignment="center"
          android:textSize= "22sp"
          android:textColor= "@android:color/black"
          android:layout_marginTop="20dp"
          />

      <TextView
          android:id="@+id/textViewDestination"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/false_cr_false_avenue"
          android:textAlignment="center"
          android:textSize= "17sp"
          android:layout_marginTop="5dp"
          />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation = "horizontal"
          android:layout_gravity = "center"
          android:layout_marginTop= "20dp"

          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_weight="1"
              android:text="@string/tiempo_de_llegada"
              android:textColor="@android:color/black"
              android:textSize="18sp" />

          <TextView
              android:id="@+id/textViewMin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:text="0 Min" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "vertical"
            android:layout_weight="1"
            >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text= "@string/distancia"
              android:textColor="@android:color/black"
              android:layout_gravity = "center"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/textViewDistance"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity = "center"
              android:text= "@string/_0_km"/>



        </LinearLayout>


      </LinearLayout>

      <TextView
          android:id="@+id/textViewCounter"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          android:text="100"
          android:textAlignment="center"
          android:textSize="40sp" />


    </LinearLayout>
  </ScrollView>



  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="bottom"
      android:layout_margin="20dp">

      <Button
          android:id="@+id/btnAcceptBooking"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/aceptar"
          android:layout_weight="1"
          android:background="@drawable/rounded_button"
          android:backgroundTint="@color/colorPrimaryDark"
          android:textColor="@color/colorWhite"
          android:layout_marginRight="5dp"/>

    <Button
        android:id="@+id/btnCancelBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rechazar"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="5dp"/>



  </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>