<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/user_male"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/sample_title"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/name_navq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/username"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:background="@color/colorAccent"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menu_recycler"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        tools:itemCount="7"
        tools:listitem="@layout/menu_element" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="23dp"
        android:background="#cccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/do_more"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/get_food_delivered"

            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/earn_money_driving"
            android:textColor="#000000"

            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/rate_us_in_the_store"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>