<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/enjoy_your_order"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_mobile_num_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mobile"
                    android:drawablePadding="10dp"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="14"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_Id_num"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mobile"
                    android:drawablePadding="10dp"
                    android:hint="@string/id_num"
                    android:inputType="number"
                    android:maxLength="14"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialProgressBar.ProgressBar.NoPadding"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mobile"
                    android:drawablePadding="10dp"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:maxLength="14"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radiobtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/car"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Car"/>
                <RadioButton
                    android:id="@+id/motorcycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Motorcycle"/>

            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/lay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_color"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_mobile"
                            android:drawablePadding="10dp"
                            android:hint="@string/id_color"
                            android:inputType="text"
                            android:maxLength="20"
                            tools:ignore="TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_car_type"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_mobile"
                            android:drawablePadding="10dp"
                            android:hint="@string/car_type"
                            android:inputType="text"
                            android:maxLength="20"
                            tools:ignore="TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_registration"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_mobile"
                        android:drawablePadding="10dp"
                        android:hint="@string/id_registration"
                        android:inputType="number"
                        android:maxLength="14"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/register_employee_id_card_iv"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:contentDescription="@string/your_id_card"
                android:scaleType="fitStart"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/register_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:minHeight="48dp"
                android:text="@string/i_agree_to_the_terms_conditions"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorWhite"
                    android:onClick="openPreviewActivity"
                    android:text="@string/preview"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/register"
                    android:background="@color/colorPrimary"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>